# podcast-api-client-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  openapi.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: generate-python-client.ts
src/podengine/: __init__.py
src/podengine/_core/: __init__.py  _client.py  errors.py  transform.py
src/podengine/_generated/: __init__.py  models.py  resources.py
tests/: test_client.py  test_core.py  test_generated_in_sync.py  test_models.py  test_transform.py
